[gd_scene load_steps=8 format=3 uid="uid://c1hponrydw1yi"]

[ext_resource type="Script" path="res://src/management/transition_manager.gd" id="1_30u6i"]
[ext_resource type="PackedScene" uid="uid://c5x56plqlovpl" path="res://src/quicktimes/snooze.tscn" id="2_j0ae8"]
[ext_resource type="FontFile" uid="uid://dex3afruterfj" path="res://src/fonts/e1234_italic.ttf" id="3_fi5m8"]
[ext_resource type="FontFile" uid="uid://dovlds8a1iwhq" path="res://src/fonts/handlee.ttf" id="4_3c8og"]
[ext_resource type="Shader" path="res://src/management/ui_blur.gdshader" id="4_jjdfs"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2wyfr"]
shader = ExtResource("4_jjdfs")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_prfhy"]
bg_color = Color(0, 0, 0, 0.196078)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 0.784314)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="Transition Manager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_30u6i")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="Snooze" parent="CanvasLayer" instance=ExtResource("2_j0ae8")]
unique_name_in_owner = true

[node name="TimePanel" type="Panel" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_2wyfr")
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -238.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 71.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_prfhy")

[node name="SnoozeLabels" type="HBoxContainer" parent="CanvasLayer"]
custom_minimum_size = Vector2(222, 0)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -238.0
offset_top = 81.0
offset_right = -16.0
offset_bottom = 101.0
grow_horizontal = 0
theme_override_constants/separation = 0

[node name="Snooze3" type="Panel" parent="CanvasLayer/SnoozeLabels"]
material = SubResource("ShaderMaterial_2wyfr")
custom_minimum_size = Vector2(67, 20)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_prfhy")

[node name="SnoozeLabel3" type="Label" parent="CanvasLayer/SnoozeLabels/Snooze3"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_3c8og")
theme_override_font_sizes/font_size = 14
text = "SNOOZE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacing" type="Control" parent="CanvasLayer/SnoozeLabels"]
layout_mode = 2
size_flags_horizontal = 7

[node name="Snooze2" type="Panel" parent="CanvasLayer/SnoozeLabels"]
material = SubResource("ShaderMaterial_2wyfr")
custom_minimum_size = Vector2(67, 20)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_prfhy")

[node name="SnoozeLabel2" type="Label" parent="CanvasLayer/SnoozeLabels/Snooze2"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_3c8og")
theme_override_font_sizes/font_size = 14
text = "SNOOZE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacing2" type="Control" parent="CanvasLayer/SnoozeLabels"]
layout_mode = 2
size_flags_horizontal = 7

[node name="Snooze1" type="Panel" parent="CanvasLayer/SnoozeLabels"]
material = SubResource("ShaderMaterial_2wyfr")
custom_minimum_size = Vector2(67, 20)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_prfhy")

[node name="SnoozeLabel1" type="Label" parent="CanvasLayer/SnoozeLabels/Snooze1"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_3c8og")
theme_override_font_sizes/font_size = 14
text = "SNOOZE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Clock" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -233.0
offset_top = 21.0
offset_right = -73.0
offset_bottom = 71.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("3_fi5m8")
theme_override_font_sizes/font_size = 40
text = "08:00"
vertical_alignment = 2

[node name="Seconds" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 30)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -75.0
offset_top = 37.0
offset_right = -25.0
offset_bottom = 67.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0.701961, 0.701961, 0.701961, 1)
theme_override_fonts/font = ExtResource("3_fi5m8")
theme_override_font_sizes/font_size = 20
text = ":00"
horizontal_alignment = 1
vertical_alignment = 2
